--- a/src/Resources/Themes/Light.xaml
+++ b/src/Resources/Themes/Light.xaml
@@ -3,7 +3,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <SolidColorBrush x:Key="Brush.Logo" Color="#FFF05133"/>
 
-    <SolidColorBrush x:Key="Brush.TitleBar" Color="#FFE9E9E9"/>
+    <SolidColorBrush x:Key="Brush.TitleBar" Color="White"/>
     <SolidColorBrush x:Key="Brush.Window" Color="#FFF8F8F8"/>
     <SolidColorBrush x:Key="Brush.NewPageHover" Color="#1D000000"/>
     <SolidColorBrush x:Key="Brush.Popup" Color="White"/>
@@ -14,11 +14,13 @@
     <SolidColorBrush x:Key="Brush.GroupContent" Color="#FFF8F8F8"/>
     <SolidColorBrush x:Key="Brush.Decorator" Color="#FFBDBDBD"/>
     <SolidColorBrush x:Key="Brush.Conflict" Color="#FF836C2E"/>
-    
+
+    <SolidColorBrush x:Key="Brush.Border0" Color="#FFCFCFCF"/>
     <SolidColorBrush x:Key="Brush.Border1" Color="#FF898989"/>
     <SolidColorBrush x:Key="Brush.Border2" Color="#FFCFCFCF"/>
     <SolidColorBrush x:Key="Brush.Border3" Color="#FFEFEFEF"/>
     <SolidColorBrush x:Key="Brush.Border4" Color="#FFF2F2F2"/>
+    
     <SolidColorBrush x:Key="Brush.FG1" Color="#FF1F1F1F"/>
     <SolidColorBrush x:Key="Brush.FG2" Color="#FF6F6F6F"/>
     <SolidColorBrush x:Key="Brush.FG3" Color="#FFFFFFFF"/>
