--- a/src/Resources/Styles/Path.xaml
+++ b/src/Resources/Styles/Path.xaml
@@ -1,4 +1,4 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Style x:Key="Style.Icon" TargetType="{x:Type Path}">
         <Setter Property="Width" Value="16"/>
@@ -8,14 +8,5 @@
         <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="SnapsToDevicePixels" Value="True"/>
         <Setter Property="RenderOptions.BitmapScalingMode" Value="HighQuality"/>
-    </Style>
-
-    <Style x:Key="Style.WindowControlIcon" TargetType="{x:Type Path}">
-        <Setter Property="Stretch" Value="None"/>
-        <Setter Property="Fill" Value="{DynamicResource Brush.FG1}"/>
-        <Setter Property="VerticalAlignment" Value="Center"/>
-        <Setter Property="SnapsToDevicePixels" Value="True"/>
-        <Setter Property="RenderOptions.BitmapScalingMode" Value="HighQuality"/>
-        <Setter Property="RenderOptions.EdgeMode" Value="Aliased"/>
     </Style>
 </ResourceDictionary>
