--- a/src/UI/CommitViewer.xaml
+++ b/src/UI/CommitViewer.xaml
@@ -306,6 +306,8 @@
                         FontFamily="Consolas" 
                         Visibility="{Binding ElementName=toggleSwitchMode, Path=IsChecked, Converter={StaticResource InverseBoolToCollapsed}}"
                         Background="{StaticResource Brush.Contents}"
+                        BorderBrush="{StaticResource Brush.Border2}"
+                        BorderThickness="1"
                         SelectedItemChanged="ChangeTreeItemSelected" 
                         PreviewMouseWheel="TreeMouseWheel">
                         <TreeView.Resources>
@@ -354,6 +356,8 @@
                         SelectionChanged="ChangeListSelectionChanged"
                         SelectionMode="Single"
                         SelectionUnit="FullRow"
+                        BorderBrush="{StaticResource Brush.Border2}"
+                        BorderThickness="1"
                         Background="{StaticResource Brush.Contents}">
                         <DataGrid.Resources>
                             <converters:FileStatusToColor x:Key="StatusColorConverter"/>
@@ -400,8 +404,12 @@
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
 
-                <Border Grid.Column="0" Margin="2" Background="{StaticResource Brush.Contents}">
-                    <TreeView x:Name="fileTree" SelectedItemChanged="FileTreeItemSelected" FontFamily="Consolas" PreviewMouseWheel="TreeMouseWheel">
+                <Border Grid.Column="0" Background="{StaticResource Brush.Contents}" BorderBrush="{StaticResource Brush.Border2}" BorderThickness="1">
+                    <TreeView
+                        x:Name="fileTree" 
+                        SelectedItemChanged="FileTreeItemSelected" 
+                        FontFamily="Consolas" 
+                        PreviewMouseWheel="TreeMouseWheel">
                         <TreeView.ItemContainerStyle>
                             <Style TargetType="{x:Type TreeViewItem}" BasedOn="{StaticResource Style.TreeView.ItemContainerStyle}">
                                 <Setter Property="IsExpanded" Value="{Binding IsNodeExpanded, Mode=TwoWay}"/>
@@ -434,6 +442,7 @@
                         </TreeView.ItemTemplate>
                     </TreeView>
                 </Border>
+                
 
                 <GridSplitter Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="Transparent"/>
 
