--- a/src/UI/FileHistories.xaml
+++ b/src/UI/FileHistories.xaml
@@ -61,23 +61,10 @@
                 <!-- Options -->
                 <StackPanel Grid.Column="2" Orientation="Horizontal" WindowChrome.IsHitTestVisibleInChrome="True">
                     <Button Click="Minimize" Width="32" Style="{StaticResource Style.Button.HighlightHover}">
-                        <Path Style="{StaticResource Style.WindowControlIcon}" Data="{StaticResource Icon.Minimize}"/>
+                        <Path Style="{StaticResource Style.Icon}" Data="{StaticResource Icon.Minimize}"/>
                     </Button>
                     <Button Click="MaximizeOrRestore" Width="32" Style="{StaticResource Style.Button.HighlightHover}">
-                        <Path>
-                            <Path.Style>
-                                <Style TargetType="{x:Type Path}" BasedOn="{StaticResource Style.WindowControlIcon}">
-                                    <Style.Triggers>
-                                        <DataTrigger Binding="{Binding WindowState, ElementName=me}" Value="Maximized">
-                                            <Setter Property="Data" Value="{StaticResource Icon.Restore}"/>
-                                        </DataTrigger>
-                                        <DataTrigger Binding="{Binding WindowState, ElementName=me}" Value="Normal">
-                                            <Setter Property="Data" Value="{StaticResource Icon.Maximize}"/>
-                                        </DataTrigger>
-                                    </Style.Triggers>
-                                </Style>
-                            </Path.Style>
-                        </Path>
+                        <Path Width="14" Height="14" Style="{StaticResource Style.Icon}" Data="{StaticResource Icon.Maximize}"/>
                     </Button>
                     <Button Click="Quit" Width="32">
                         <Button.Style>
